--- a/CacheObject/CacheObject/CacheObject.csproj
+++ b/CacheObject/CacheObject/CacheObject.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="Microsoft.Extensions.Caching.StackExchangeRedis" Version="8.0.2" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0" />
     <PackageReference Include="Microsoft.Extensions.Options" Version="8.0.2" />
+    <PackageReference Include="Polly" Version="8.3.0" />
   </ItemGroup>
 
 </Project>
