--- a/CacheObject/CacheObject.csproj
+++ b/CacheObject/CacheObject.csproj
@@ -12,6 +12,7 @@
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0" />
     <PackageReference Include="Microsoft.Extensions.Options" Version="8.0.2" />
     <PackageReference Include="Polly" Version="8.3.0" />
+    <PackageReference Include="StackExchange.Redis" Version="2.7.23" />
   </ItemGroup>
 
 </Project>
