--- a/MockCachingOperation/appsettings.json
+++ b/MockCachingOperation/appsettings.json
@@ -2,5 +2,11 @@
   "AppSettings": {
     "CacheType": "TestCache",
     "UseCache": "true"
+  },
+  "CacheSettings": {
+    "RetryCount": "3",
+    "RetryInterval": "5",
+    "AbsoluteExpiration": "100",
+    "ConnectionString": "TestConnectionString"
   }
 }
