full refactor pt1

--- a/MockCachingOperation/MockCachingOperation.csproj
+++ b/MockCachingOperation/MockCachingOperation.csproj
@@ -21,7 +21,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\CacheObject\CacheObject.csproj" />
+    <ProjectReference Include="..\CacheProvider\CacheProvider.csproj" />
   </ItemGroup>
 
   <ItemGroup>
