full refactor pt2

--- a/MockCachingOperation/appsettings.json
+++ b/MockCachingOperation/appsettings.json
@@ -1,7 +1,6 @@
 {
   "AppSettings": {
-    "CacheType": "TestCache",
-    "UseCache": "true"
+    "CacheType": "Local"
   },
   "CacheSettings": {
     "RetryCount": "3",
