--- a/MockCachingOperation/appsettings.json
+++ b/MockCachingOperation/appsettings.json
@@ -6,6 +6,8 @@
     "RetryCount": "3",
     "RetryInterval": "5",
     "AbsoluteExpiration": "100",
-    "ConnectionString": "TestConnectionString"
+    "ConnectionStrings": {
+      "Redis": "ReplaceMe"
+    }
   }
 }
