--- a/MockCachingOperation/MockCachingOperation.csproj
+++ b/MockCachingOperation/MockCachingOperation.csproj
@@ -7,7 +7,7 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
-  <ItemGroup>
+  <Group>
     <PackageReference Include="Amazon.Extensions.Configuration.SystemsManager" Version="6.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.2" />
     <PackageReference Include="Microsoft.Extensions.Caching.StackExchangeRedis" Version="8.0.2" />
@@ -18,16 +18,16 @@
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0" />
     <PackageReference Include="StackExchange.Redis" Version="2.7.23" />
     <PackageReference Include="System.Configuration.ConfigurationManager" Version="8.0.0" />
-  </ItemGroup>
+  </Group>
 
-  <ItemGroup>
+  <Group>
     <ProjectReference Include="..\CacheProvider\CacheProvider.csproj" />
-  </ItemGroup>
+  </Group>
 
-  <ItemGroup>
+  <Group>
     <None Update="appsettings.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-  </ItemGroup>
+  </Group>
 
 </Project>
