--- a/MockCachingOperation/appsettings.json
+++ b/MockCachingOperation/appsettings.json
@@ -1,6 +1,6 @@
 {
   "AppSettings": {
-    "CacheType": "Local"
+    "ArbitraryProperty": "true"
   },
   "CacheSettings": {
     "RetryCount": "3",
