--- a/src/DataFerry.csproj
+++ b/src/DataFerry.csproj
@@ -4,15 +4,15 @@
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>  
-	<PackageId>rsalus.CacheProvider</PackageId>
-    <Title>CacheProvider</Title>
-	<Version>1.2.4</Version>
-	<Authors>rsalus</Authors>
-    <Description>CacheProvider is a generic class designed to provide caching functionality for any type of object. It packages a distributed Redis caching implementation into one Provider class, allowing for easy pairing with any RealProvider component following the ASP.NET Provider model.</Description>
+	<PackageId>lvlup.DataFerry</PackageId>
+    <Title>DataFerry</Title>
+	<Version>1.0.0</Version>
+	<Authors>rsalus, lvlup-sw</Authors>
+    <Description>Simplify data access and boost resiliency with DataFerry, a generic caching solution designed for tight coupling between your cache and database.</Description>
     <PackageProjectUrl>https://github.com/rsalus/cache-provider</PackageProjectUrl>
     <PackageReadmeFile>README.md</PackageReadmeFile>
 	<PackageLicenseExpression>MIT</PackageLicenseExpression>
-	<PackageTags>Redis;StackExchange.Redis;Cache;Caching;Provider;ASP.NET</PackageTags>
+	<PackageTags>Redis;StackExchange.Redis;Cache;Caching;Provider;ASP.NET;Polly</PackageTags>
   </PropertyGroup>
 
   <ItemGroup>
@@ -32,7 +32,7 @@
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0" />
     <PackageReference Include="Microsoft.Extensions.Options" Version="8.0.2" />
     <PackageReference Include="Polly" Version="8.4.1" />
-    <PackageReference Include="StackExchange.Redis" Version="2.8.0" />
+    <PackageReference Include="StackExchange.Redis" Version="2.8.12" />
   </ItemGroup>
 
 </Project>
