--- a/src/DataFerry.csproj
+++ b/src/DataFerry.csproj
@@ -7,7 +7,7 @@
 	<PackageId>lvlup.DataFerry</PackageId>
     <Title>DataFerry</Title>
 	<Version>1.0.0</Version>
-	<Authors>rsalus, lvlup-sw</Authors>
+	<Authors>lvlup; rsalus</Authors>
     <Description>Simplify data access and boost resiliency with DataFerry, a generic caching solution designed for tight coupling between your cache and database.</Description>
     <PackageProjectUrl>https://github.com/rsalus/cache-provider</PackageProjectUrl>
     <PackageReadmeFile>README.md</PackageReadmeFile>
