--- a/src/DataFerry.csproj
+++ b/src/DataFerry.csproj
@@ -6,10 +6,10 @@
     <Nullable>enable</Nullable>  
 	<PackageId>lvlup.DataFerry</PackageId>
     <Title>DataFerry</Title>
-	<Version>1.0.0</Version>
+	<Version>1.0.1</Version>
 	<Authors>lvlup; rsalus</Authors>
     <Description>Simplify data access and boost resiliency with DataFerry, a generic caching solution designed for tight coupling between your cache and database.</Description>
-    <PackageProjectUrl>https://github.com/rsalus/cache-provider</PackageProjectUrl>
+    <PackageProjectUrl>https://github.com/lvlup-sw/DataFerry</PackageProjectUrl>
     <PackageReadmeFile>README.md</PackageReadmeFile>
 	<PackageLicenseExpression>MIT</PackageLicenseExpression>
 	<PackageTags>Redis;StackExchange.Redis;Cache;Caching;Provider;ASP.NET;Polly</PackageTags>
