--- a/src/DataFerry.csproj
+++ b/src/DataFerry.csproj
@@ -6,7 +6,7 @@
     <Nullable>enable</Nullable>  
 	<PackageId>lvlup.DataFerry</PackageId>
     <Title>DataFerry</Title>
-	<Version>1.0.2</Version>
+	<Version>1.0.3</Version>
 	<Authors>lvlup; rsalus</Authors>
     <Description>Simplify data access and boost resiliency with DataFerry, a generic caching solution designed for tight coupling between your cache and database.</Description>
     <PackageProjectUrl>https://github.com/lvlup-sw/DataFerry</PackageProjectUrl>
@@ -20,6 +20,7 @@
       <Pack>True</Pack>
       <PackagePath>\</PackagePath>
     </None>
+    <PackageReference Include="lvlup.PowerUp" Version="1.0.1" />
 	<PackageReference Include="NuGet.Build.Tasks.Pack" Version="6.11.0">
 		<PrivateAssets>all</PrivateAssets>
 		<IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
