update gha path

--- a/.github/workflows/build-and-push-nuget.yml
+++ b/.github/workflows/build-and-push-nuget.yml
@@ -30,7 +30,7 @@ jobs:
 
     - name: Build the Package
       run: |
-        cd src/
+        cd src/DataFerry/
         dotnet pack -c Release
 
     - name: Push the Package to NuGet
