--- a/src/DataFerry/DataFerry.csproj
+++ b/src/DataFerry/DataFerry.csproj
@@ -6,9 +6,9 @@
     <Nullable>enable</Nullable>  
 	<PackageId>lvlup.DataFerry</PackageId>
     <Title>DataFerry</Title>
-	<Version>1.0.5</Version>
+	<Version>1.0.6</Version>
 	<Authors>lvlup; rsalus</Authors>
-    <Description>Simplify data access and boost resiliency with DataFerry, a generic caching solution designed for tight coupling between your cache and database.</Description>
+    <Description>Simplify data access and boost resiliency with DataFerry, a generic caching solution designed to tightly couple your cache and database.</Description>
     <PackageProjectUrl>https://github.com/lvlup-sw/DataFerry</PackageProjectUrl>
     <PackageReadmeFile>README.md</PackageReadmeFile>
 	<PackageLicenseExpression>MIT</PackageLicenseExpression>
@@ -20,21 +20,19 @@
       <Pack>True</Pack>
       <PackagePath>\</PackagePath>
     </None>
-    <PackageReference Include="lvlup.PowerUp" Version="1.0.1" />
-    <PackageReference Include="Microsoft.IO.RecyclableMemoryStream" Version="3.0.1" />
-	<PackageReference Include="NuGet.Build.Tasks.Pack" Version="6.11.0">
+	<PackageReference Include="NuGet.Build.Tasks.Pack" Version="6.11.1">
 		<PrivateAssets>all</PrivateAssets>
 		<IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
 	</PackageReference>
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.8" />
-    <PackageReference Include="Microsoft.Extensions.Caching.StackExchangeRedis" Version="8.0.8" />
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.10" />
+    <PackageReference Include="Microsoft.Extensions.Caching.StackExchangeRedis" Version="8.0.10" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.1" />
     <PackageReference Include="Microsoft.Extensions.Options" Version="8.0.2" />
-    <PackageReference Include="Polly" Version="8.4.1" />
-    <PackageReference Include="StackExchange.Redis" Version="2.8.12" />
+    <PackageReference Include="Polly" Version="8.4.2" />
+    <PackageReference Include="StackExchange.Redis" Version="2.8.16" />
   </ItemGroup>
 
 </Project>
