--- a/src/DataFerry/lvlup.DataFerry.csproj
+++ b/src/DataFerry/lvlup.DataFerry.csproj
@@ -14,6 +14,7 @@
     <PackageReadmeFile>README.md</PackageReadmeFile>
 	<PackageLicenseExpression>MIT</PackageLicenseExpression>
 	<PackageTags>Redis;StackExchange.Redis;Cache;Caching;Provider;ASP.NET;Polly</PackageTags>
+	<AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
 
   <ItemGroup>
@@ -21,6 +22,7 @@
       <Pack>True</Pack>
       <PackagePath>\</PackagePath>
     </None>
+    <PackageReference Include="BitFaster.Caching" Version="2.5.2" />
     <PackageReference Include="Microsoft.IO.RecyclableMemoryStream" Version="3.0.1" />
 	<PackageReference Include="NuGet.Build.Tasks.Pack" Version="6.11.1">
 		<PrivateAssets>all</PrivateAssets>
