--- a/src/DataFerry/lvlup.DataFerry.csproj
+++ b/src/DataFerry/lvlup.DataFerry.csproj
@@ -38,6 +38,8 @@
     <PackageReference Include="Microsoft.Extensions.Options" Version="9.0.0-rc.2.24473.5" />
     <PackageReference Include="Polly" Version="8.4.2" />
     <PackageReference Include="StackExchange.Redis" Version="2.8.16" />
+    <PackageReference Include="System.Reactive" Version="6.0.1" />
+    <PackageReference Include="System.Reactive.Linq" Version="6.0.1" />
   </ItemGroup>
 
 </Project>
