--- a/src/DataFerry.Tests/lvlup.DataFerry.Tests.csproj
+++ b/src/DataFerry.Tests/lvlup.DataFerry.Tests.csproj
@@ -7,7 +7,7 @@
 
     <IsPackable>false</IsPackable>
     <IsTestProject>true</IsTestProject>
-	<StartupObject>lvlup.DataFerry.Tests.ConcurrentPriorityQueueBenchmarks</StartupObject>
+	<StartupObject>lvlup.DataFerry.Tests.MemCacheBenchmark</StartupObject>
   </PropertyGroup>
 
   <ItemGroup>
