--- a/.github/workflows/build-and-push-nuget.yml
+++ b/.github/workflows/build-and-push-nuget.yml
@@ -28,6 +28,11 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v4
 
+    - name: Setup .NET SDK
+      uses: actions/setup-dotnet@v3
+      with:
+        dotnet-version: '9.0.x'
+
     - name: Build the Package
       run: |
         cd src/DataFerry/
