begin Lfu rewrite

--- a/.gitignore
+++ b/.gitignore
@@ -398,3 +398,11 @@ FodyWeavers.xsd
 
 # JetBrains Rider
 *.sln.iml
+
+# Ignore .DS_Store files (macOS metadata)
+.DS_Store
+**/ .DS_Store
+
+# Ignore the .idea directory (IntelliJ IDEA / JetBrains IDE settings)
+.idea/
+src/.idea/
