feat: second pass at CPQ; update TryDeleteMinProbabilistically and TryAdd

--- a/src/.editorconfig
+++ b/src/.editorconfig
@@ -410,15 +410,22 @@ dotnet_diagnostic.IDE1006.severity = suggestion
 dotnet_diagnostic.SA0001.severity = none
 dotnet_diagnostic.SA1000.severity = none
 dotnet_diagnostic.SA1010.severity = none
+dotnet_diagnostic.SA1011.severity = suggestion
 dotnet_diagnostic.SA1101.severity = none
 dotnet_diagnostic.SA1118.severity = none
 dotnet_diagnostic.SA1124.severity = none
+dotnet_diagnostic.SA1127.severity = suggestion
 dotnet_diagnostic.SA1200.severity = none
 dotnet_diagnostic.SA1201.severity = none
+dotnet_diagnostic.SA1202.severity = none
+dotnet_diagnostic.SA1204.severity = none
 dotnet_diagnostic.SA1206.severity = none
+dotnet_diagnostic.SA1214.severity = none
 dotnet_diagnostic.SA1308.severity = none
 dotnet_diagnostic.SA1309.severity = none
 dotnet_diagnostic.SA1311.severity = suggestion
+dotnet_diagnostic.SA1313.severity = silent
+dotnet_diagnostic.SA1401.severity = suggestion
 dotnet_diagnostic.SA1413.severity = none
 dotnet_diagnostic.SA1503.severity = silent
 dotnet_diagnostic.SA1515.severity = suggestion
